welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: illegal start of simple expression
def getMotiF():Array[Color] =
^Array1:33: error: Unmatched closing brace '}' ignored here
}
^