welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
def marquer() 
{
baisseBrosse();
leveBrosse();
}

var hauteur=getMondeHauteur();
var T = new Array[Color](hauteur);
for (i<-1 to hauteur-1)
def getMotiF():Array[Color] =
{
	for (i <- 1 to hauteur)
	{
		T(i-1)=getCouleurSol();
		avance();
	} 	 
}


getMotif();
}
gauche(); 
avance();
droite();
avance(2);
marquer();

}
